[EME][CDMProxy] Fix waitingForKey logic https://bugs.webkit.org/show_bug.cgi?id=210437

Reviewed by Xabier Rodriguez-Calvar.

startedWaitingForKey() was incorrectly flagged. It needs to signal on
the 0->1 transition, here it was only signalling on N->N+1 where N>0.

Also break ASSERTs into separate statements, it makes it easier in a
crash dump to see which conjuct fired.

Test: imported/w3c/web-platform-tests/encrypted-media/clearkey-mp4-waiting-for-a-key.https.html

* platform/encryptedmedia/CDMProxy.cpp:
(WebCore::CDMInstanceProxy::startedWaitingForKey):
(WebCore::CDMInstanceProxy::stoppedWaitingForKey):


Canonical link: https://commits.webkit.org/223362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260066 268f45cc-cd09-0410-ab3c-d52691b4dbfc